@@ -1,5 +1,16 @@
 2007-06-11  Miloslav Trmač  <mitr@redhat.com>
 
+	* userhelper.c (wrap, main): Use the locale's charset.
+	(converse_console): Don't re-set the charset to the locale's charset,
+	it is now the default.
+	* userhelper-wrap.c (write_childin_string): New function.
+	(userhelper_write_childin): Convert written data to the locale's
+	charset if possible.  Simplify and reformat.
+	(userhelper_runv): Convert data read from the child from the locale's
+	charset to UTF-8.
+
+	* userhelper-wrap.c: Remove unnecessary #includes.
+
 	* userinfo.c: Remove unnecessary #includes.
 
 	* userhelper-wrap.c (userhelper_parse_childout): Modify to handle only
